assets/sass/layout/_hero.scss
@use '../config/fonts';
@use '../config/colors';
@use '../config/sizes';

.hero {
  background: linear-gradient(180deg, #8FD1F5 0%, #FFFFFF 100%), #C4C4C4;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: top;
  position: relative;

  h1 {
    padding-top: sizes.$xl;
    text-align: center;
    margin: auto;
    @include fonts.text(colors.$black, 400, sizes.$s);
    text-transform: uppercase;
    max-width: 760px;
    line-height: 1;
  }
  
  p {
    max-width: 620px;
    @include fonts.text(colors.$black, 400, 18px);
    opacity: 0.6;
    text-align: center;
    margin: auto;
    margin-top: sizes.$s;
  }

  .product-mockup {
    margin-top: sizes.$xl;
    width: 100%;
  }

  .sand-illustration {
    width: 100%;
  }

  // Colocacion
  &.hero-colocacion {
    .wrapper {
      .hero-container {
        display: grid;
        grid-template-columns: 400px 1fr;
        grid-gap: sizes.$s;
        align-items: center;
        padding-top: sizes.$xxxl;

        .text {
          h1 {
            padding-top: 0;
            text-align: left;
            line-height: 1.3;
          }

          .installation-container {
            margin-top: sizes.$xs;
            display: flex;
            align-items: center;

            img {
              margin-right: sizes.$xs;
            }

            p {
              text-align: left;
              margin: 0;
              max-width: 100%;
              flex: 1;
              max-width: 240px;

              em {
                font-style: italic;
              }
            }
          }
        }
      }
    }

    .know-more {
      position: absolute;
      bottom: sizes.$m;
      left: 50%;
      margin-left: -42px;
    }
  }

  // iPad portrait
  @media screen and (max-width: 1024px) {
    &.hero-colocacion {
      .wrapper {
        .hero-container {
          grid-template-columns: 1fr;
          padding-top: sizes.$xl;

          .text {
            h1 {
              max-width: 100%;
            }
          }
        }
      }
    }
  }

  // iPad portrait
  @media screen and (max-width: 768px) {
    h1, p {
      max-width: 90%;
    }
  }
  
  // Mobile landscape
  @media screen and (max-width: 720px) {
    h1 {
      font-size: sizes.$xs;
    }

    p {
      font-size: sizes.$xxs;
      margin-top: sizes.$xxs;
    }
    
    .product-mockup {
      margin-top: sizes.$m;
    }
  }

  // Mobile portrait
  @media screen and (max-width: 540px) {
    &.hero-colocacion {
      .wrapper {
        .hero-container {
          .text {
            .installation-container {
              img {
                margin-right: 0;
              }

              p {
                display: none;
              }
            }
          }
        }
      }
    }
  }
}

